--- a/labs/lab08/presentation/os2--lab08--presentation.qmd
+++ b/labs/lab08/presentation/os2--lab08--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 8"
+subtitle: "Планировщики событий"
 license: CC BY
-date: 1970-01-01
+date: 2025-10-25
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,173 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цели работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получение навыков работы с планировщиками событий cron и at.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Выполните задания по планированию задач с помощью crond.
+2. Выполните задания по планированию задач с помощью atd.
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Планирование задач с помощью cron
 
-## Материалы и методы
+## Запустите терминал и получите полномочия администратора: ([рис. @fig-001])
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+su -
 
-# Создание презентации
+## Посмотрите статус демона crond: ([рис. @fig-001])
 
-## Процессор `pandoc`
+systemctl status crond -l
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+## Посмотрите содержимое файла конфигурации /etc/crontab: ([рис. @fig-001])
 
-## Формат `pdf`
+cat /etc/crontab
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+## Посмотрите список заданий в расписании: ([рис. @fig-001])
 
-## Код для формата `pdf`
+crontab -l
+Ничего не отобразится, так как расписание ещё не задано.
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+![1](image/1.png){#fig-001}
 
-## Формат `html`
+## Откройте файл расписания на редактирование:
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+crontab -e
 
-## Код для формата `html`
+![2](image/2.png)
 
-- Тема задаётся в файле `Makefile`
+Команда запустит интерфейс редактора (по умолчанию используется vi).
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+## Добавьте следующую строку в файл расписания (запись сообщения в системный журнал), используя Ins для перехода в vi в режим ввода:
 
-## Получающиеся форматы
+`_/1 _ \* \* \* logger This message is written from root cron`
+Закройте сеанс редактирования vi и сохраните изменения, используя команду vi:
+`Esc : w q `.
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![3](image/3.png)
 
-# Элементы презентации
+## В отчёте поясните синтаксис записи в crontab.
 
-## Актуальность
+- Синтаксис записи в crontab состоит из шести полей, разделённых пробелами:
+  `минуты часы день_месяца месяц день_недели команда`
+  Пример: `0 2 * * * /path/to/script.sh` — запускает скрипт в 2:## ночи ежедневно
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+## Посмотрите список заданий в расписании:
 
-## Цели и задачи
+crontab -l
+В расписании должна появиться запись о запланированном событии.
 
-- Не формулируйте более 1--2 целей исследования
+![4](image/4.png)
 
-## Материалы и методы
+## Не выключая систему, через некоторое время (2–3 минуты) просмотрите журнал системных событий:
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+grep written /var/log/messages
+В отчёте отразите результат.
 
-## Содержание исследования
+![5](image/5.png)
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Измените запись в расписании crontab на следующую:
 
-## Результаты
+0 _/1 _ \* 1-5 logger This message is written from root cron
+В отчёте поясните синтаксис записи в crontab.
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+![6](image/6.png)
 
+## Посмотрите список заданий в расписании:
 
-## Итоговый слайд
+crontab -l
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+![7](image/7.png)
 
-# Рекомендую
+## Перейдите в каталог /etc/cron.hourly и создайте в нём файл сценария с именем eachhour:
 
-## Принцип 10/20/30
+cd /etc/cron.hourly
+touch eachhour
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+![8](image/8.png)
 
-## Связь слайдов
+## Откройте файл eachhour для редактирования и пропишите в нём следующий скрипт (запись сообщения в системный журнал):
 
-::: incremental
+#!/bin/sh
+logger This message is written at $(date)
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+![9](image/9.png)
 
-:::
+## Сделайте файл сценария eachhour исполняемым: ([рис. @fig-002])
 
-## Количество сущностей
+chmod +x eachhour
 
-::: incremental
+## Теперь перейдите в каталог /etc/crond.d и создайте в нём файл с расписанием eachhour: ([рис. @fig-002])
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+cd /etc/cron.d
+touch eachhour
 
-:::
+![10](image/10.png){#fig-002}
 
-## Общие рекомендации
+Откройте этот файл для редактирования и поместите в него следующее содержимое:
+`14 * * * * root logger This message is written from /etc/cron.d`
+Сохраните изменения.
 
-::: incremental
+![11](image/11.png)
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+В отчёте поясните синтаксис этой записи.
 
-:::
+- Эта запись означает, что в 14 минут каждого часа, каждый день, каждый месяц и каждый день недели, пользователь root выполнит команду logger This message is written from /etc/cron.d (которая записывает указанное сообщение в системный журнал).
 
-## Представление данных
+## Не выключая систему, через некоторое время (2–3 часа) просмотрите журнал системных событий:
 
-::: incremental
+`grep written /var/log/messages`
+По журналу определите, был ли осуществлён запуск сценария eachhour в соответствии с заданным расписанием.
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+![12](image/12.png)
 
-:::
+# Планирование заданий с помощью at
+
+## Запустите терминал и получите полномочия администратора:
+
+su -
+
+![su](image/su.png)
+
+## Проверьте, что служба atd загружена и включена:
+
+systemctl status atd
+
+![13](image/13.png)
+
+## Задайте выполнение команды logger message from at в 9:30 (или замените на
+
+любое другое время, когда вы работаете над этим упражнением). Для этого введите
+at 9:30
+Затем введите
+logger message from at
+Используйте `Ctrl + d` , чтобы закрыть оболочку.
+
+![14](image/14.png)
+
+## Убедитесь, что задание действительно запланировано:
+
+`atq`
+
+![15](image/15.png)
+
+С помощью команды
+`grep 'from at' /var/log/messages`
+посмотрите, появилось ли соответствующее сообщение в лог-файле в указанное вами время
+
+![16](image/16.png)
+
+## Выводы
+
+Я получил навыки для работы с планировщиками событий cron и at.
