--- a/labs/lab08/report/os2--lab08--report.qmd
+++ b/labs/lab08/report/os2--lab08--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 8"
+subtitle: "Планировщики событий"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,186 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получение навыков работы с планировщиками событий cron и at.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Выполните задания по планированию задач с помощью crond.
+2. Выполните задания по планированию задач с помощью atd.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Планирование задач с помощью cron
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Запустите терминал и получите полномочия администратора: ([рис. @fig-001])
+   su -
+
+2. Посмотрите статус демона crond: ([рис. @fig-001])
+   systemctl status crond -l
+
+3. Посмотрите содержимое файла конфигурации /etc/crontab: ([рис. @fig-001])
+   cat /etc/crontab
+
+4. Посмотрите список заданий в расписании: ([рис. @fig-001])
+   crontab -l
+   Ничего не отобразится, так как расписание ещё не задано.
+
+   ![1](image/1.png){#fig-001}
+
+5. Откройте файл расписания на редактирование:
+   crontab -e
+
+   ![2](image/2.png)
+
+   Команда запустит интерфейс редактора (по умолчанию используется vi). Добавьте следующую строку в файл расписания (запись сообщения в системный журнал),
+   используя Ins для перехода в vi в режим ввода:
+   `_/1 _ \* \* \* logger This message is written from root cron`
+   Закройте сеанс редактирования vi и сохраните изменения, используя команду vi:
+   `Esc : w q `.
+
+   ![3](image/3.png)
+
+   В отчёте поясните синтаксис записи в crontab.
+
+   - Синтаксис записи в crontab состоит из шести полей, разделённых пробелами:
+     `минуты часы день_месяца месяц день_недели команда`
+     Пример: `0 2 * * * /path/to/script.sh` — запускает скрипт в 2:00 ночи ежедневно
+
+6. Посмотрите список заданий в расписании:
+   crontab -l
+   В расписании должна появиться запись о запланированном событии.
+
+   ![4](image/4.png)
+
+7. Не выключая систему, через некоторое время (2–3 минуты) просмотрите журнал
+   системных событий:
+   grep written /var/log/messages
+   В отчёте отразите результат.
+
+   ![5](image/5.png)
+
+8. Измените запись в расписании crontab на следующую:
+   0 _/1 _ \* 1-5 logger This message is written from root cron
+   В отчёте поясните синтаксис записи в crontab.
+
+   ![6](image/6.png)
+
+9. Посмотрите список заданий в расписании:
+   crontab -l
+
+   ![7](image/7.png)
+
+10. Перейдите в каталог /etc/cron.hourly и создайте в нём файл сценария с именем
+    eachhour:
+    cd /etc/cron.hourly
+    touch eachhour
+
+    ![8](image/8.png)
+
+11. Откройте файл eachhour для редактирования и пропишите в нём следующий скрипт (запись сообщения в системный журнал):
+    #!/bin/sh
+    logger This message is written at $(date)
+
+    ![9](image/9.png)
+
+12. Сделайте файл сценария eachhour исполняемым: ([рис. @fig-002])
+    chmod +x eachhour
+
+13. Теперь перейдите в каталог /etc/crond.d и создайте в нём файл с расписанием eachhour: ([рис. @fig-002])
+    cd /etc/cron.d
+    touch eachhour
+
+    ![10](image/10.png){#fig-002}
+
+    Откройте этот файл для редактирования и поместите в него следующее содержимое:
+    `14 * * * * root logger This message is written from /etc/cron.d`
+    Сохраните изменения.
+
+    ![11](image/11.png)
+
+    В отчёте поясните синтаксис этой записи.
+
+    - Эта запись означает, что в 14 минут каждого часа, каждый день, каждый месяц и каждый день недели, пользователь root выполнит команду logger This message is written from /etc/cron.d (которая записывает указанное сообщение в системный журнал).
+
+14. Не выключая систему, через некоторое время (2–3 часа) просмотрите журнал системных событий:
+    `grep written /var/log/messages`
+    По журналу определите, был ли осуществлён запуск сценария eachhour в соответствии с заданным расписанием.
+
+    ![12](image/12.png)
+
+## Планирование заданий с помощью at
+
+1. Запустите терминал и получите полномочия администратора:
+   su -
+
+   ![su](image/su.png)
+
+2. Проверьте, что служба atd загружена и включена:
+   systemctl status atd
+
+   ![13](image/13.png)
+
+3. Задайте выполнение команды logger message from at в 9:30 (или замените на
+   любое другое время, когда вы работаете над этим упражнением). Для этого введите
+   at 9:30
+   Затем введите
+   logger message from at
+   Используйте `Ctrl + d` , чтобы закрыть оболочку.
+
+   ![14](image/14.png)
+
+4. Убедитесь, что задание действительно запланировано:
+   `atq`
+
+   ![15](image/15.png)
+
+   С помощью команды
+   `grep 'from at' /var/log/messages`
+   посмотрите, появилось ли соответствующее сообщение в лог-файле в указанное вами время
+
+   ![16](image/16.png)
+
+# Контрольные вопросы
+
+1. Как настроить задание cron, чтобы оно выполнялось раз в 2 недели?
+
+- `0 0 */14 * *`
+
+2. Как настроить задание cron, чтобы оно выполнялось 1-го и 15-го числа каждого месяца в 2 часа ночи?
+
+- `0 2 1,15 * *`
+
+3. Как настроить задание cron, чтобы оно выполнялось каждые 2 минуты каждый день?
+
+- `*/2 * * * *`
+
+4. Как настроить задание cron, чтобы оно выполнялось 19 сентября ежегодно?
+
+- `0 0 19 9 *`
+
+5. Как настроить задание cron, чтобы оно выполнялось каждый четверг сентября ежегодно?
+
+- `0 0 * 9 4`
+
+6. Какая команда позволяет вам назначить задание cron для пользователя alice? Приведите подтверждающий пример.
+
+- `crontab -u alice -e`
+
+7. Как указать, что пользователю bob никогда не разрешено назначать задания через cron? Приведите подтверждающий пример.
+
+- `Добавить bob в /etc/cron.deny`
+
+8. Вам нужно убедиться, что задание выполняется каждый день, даже если сервер во время выполнения временно недоступен. Как это сделать?
+
+- `Использовать @daily в /etc/anacrontab или systemd-timer с Persistent=true`
+
+9. Какая команда позволяет узнать, запланированы ли какие-либо задания на выполнение планировщиком atd?
+
+- `atq`
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки для работы с планировщиками событий cron и at.
 
 # Список литературы{.unnumbered}
 
